--- a/index.html
+++ b/index.html
@@ -1,25 +1,29 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document Title</title>
-  <script async data-chatbot='d205bce3-2b6c-43ea-a6d0-277b7e6553a7' src='makerkit-chatbot.js'></script>
-</head>
-<body>
-<header>
-  <h1>Welcome to My Website</h1>
-</header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document Title</title>
+    <script
+      async
+      data-chatbot="6ba0e9c8-d71d-4c77-bfa1-fcf6d680151d"
+      src="makerkit-chatbot.js"
+    ></script>
+  </head>
+  <body>
+    <header>
+      <h1>Welcome to My Website</h1>
+    </header>
 
-<main>
-  <section>
-    <h2>About</h2>
-    <p>This is a basic HTML page starter.</p>
-  </section>
-</main>
+    <main>
+      <section>
+        <h2>About</h2>
+        <p>This is a basic HTML page starter.</p>
+      </section>
+    </main>
 
-<footer>
-  <p>Copyright &copy; 2023</p>
-</footer>
-</body>
+    <footer>
+      <p>Copyright &copy; 2023</p>
+    </footer>
+  </body>
 </html>
